--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -24,11 +24,10 @@ jobs:
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-    - run: mkdir staging && cp target/*.jar staging
     - name: Upload release asset
       uses: softprops/action-gh-release@v1
       with:
-        files: staging/*.jar
+        files: target/*.jar
     # - name: Publish to GitHub Packages Apache Maven
     #   run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
     #   env:
